<resources>
    <string name="app_name">MyGym</string>
    <string name="user_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="user_hint_r">* Username</string>
    <string name="password_hint_r">* Password</string>
    <string name="email">* Email</string>
    <string name="pwdConfirm">* Repeat password</string>

    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register now</string>
    <string name="register_text">Don\'t have an account yet?</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_login">Invalid credentials</string>
    <string name="section_routines">Routines</string>
    <string name="section_explore">Explore</string>
    <string name="section_profile">Profile</string>
    <string name="profile_first_name">First name</string>
    <string name="profile_last_name">Last name</string>
    <string name="profile_save">Save</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_photo">Change avatar</string>
    <string name="edit_profile">Edit</string>
    <string name="cancel_edit">Cancel</string>
    <string-array name="genders">
        <item>Other</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="gender">Gender</string>
    <string name="femenine">Female</string>
    <string name="masculine">Male</string>
    <string name="nav_header_desc">User image</string>
    <string name="nav_header_title">Kanye West</string>
    <string name="section_favourites">Favourites</string>

    <string name="action_search">Search</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="section_highlights">Highlights</string>
    <string name="myRoutines_title">My routines</string>
    <string name="recents_title">Recents</string>
    <string name="code">Code</string>
    <string name="email_hint">Email</string>
    <string name="confirm">Confirm</string>
    <string name="invalid_confirmation">Invalid email or code</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_code">Invalid code</string>
    <string name="action_share">Share</string>
    <string name="action_fav">Add to favourites</string>
    <string name="invalid_registration">Required fields missing</string>
    <string name="invalid_password_confirmation">Passwords don´t match</string>
    <string name="order_by">Order by</string>
    <string name="date">Date</string>
    <string name="score">Score</string>
    <string name="difficulty">Difficulty</string>
    <string name="category">Category</string>
    <string name="verification">Account verification</string>
    <string name="verification_text">We´ve sent you an email with the verification code</string>
    <string name="share_details_of_your_own_experience">Share details of your own experience</string>
    <string name="added_fav">Marked as favourite</string>
    <string name="deleted_fav">Not marked as favourite</string>
    <string name="review_success">Review sent</string>
    <string name="url">Routine URL</string>
    <string name="invalid_first_name">Invalid first name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="invalid_data">Invalid data</string>
    <string name="exit_question">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="review">Review</string>
    <string name="cancel">Cancel</string>
    <string name="error_exercise">Couldn\'t load exercise in cycle</string>
    <string name="error_cycle">Couldn\'t load cycle</string>
    <string name="routine">Routine</string>
    <string name="hard">Hard</string>
    <string name="when">When are you playing this routine?</string>
    <string name="monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="accept">Accept</string>
    <string name="cycle">Cycle</string>
    <string name="good_morning">Good morning, User! 👋 </string>
    <string name="recommended_routine">Try this routine</string>
    <string name="url_layout">Type the routine\'s URL</string>
    <string name="profile_saved">Profile saved</string>
    <string name="morning">Good morning</string>
    <string name="afternoon">Good afternoon</string>
    <string name="evening">Good evening</string>
    <string name="night">Good night</string>
    <string name="send">Send</string>
    <string name="play">Play</string>
    <string name="view_spinner_title">View:</string>
    <string name="sort_spinner_title">Sort by:</string>
    <string-array name="sort_by">
        <item name="date">Date</item>
        <item name="score">Score</item>
        <item name="difficulty">Difficulty</item>
        <item name="category">Category</item>
    </string-array>
    <string-array name="direction">
        <item name="asc">Ascendant</item>
        <item name="desc">Descendant</item>
    </string-array>
    <string name="detailed">Detailed</string>
    <string name="queue">Queue</string>
    <string name="register_success">Register successful. Please confirm your email to proceed.</string>
    <string name="existing_account">This account already exists</string>
    <string name="success_verification">Account verified successfully</string>
    <string name="fail_verification">Invalid code or email</string>
    <string name="image_picker_provider_authority_suffix" translatable="false">.imagepicker.provider</string>
    <string name="title_choose_image_provider">Choose</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>
    <string name="permission_camera_denied">
        <![CDATA[Camera permission is needed to take a picture. Please allow permission from Settings > Permissions.]]></string>
    <string name="error_failed_to_create_camera_image_file">Failed to create Camera image file</string>
    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
    <string name="error_failed_to_crop_image">Failed to crop image</string>
    <string name="error_failed_to_compress_image">Failed to compress image</string>
    <string name="error_task_cancelled">Task Cancelled</string>
    <string name="error_camera_app_not_found">Camera app not found</string>
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="ucrop_rotate">Rotate</string>
    <string name="ucrop_scale">Scale</string>
    <string name="ucrop_crop">Crop</string>
    <string name="no_my_routines">You don\'t have any routines</string>
    <string name="notif_text">Let\'s train!</string>
    <string name="error_notif">Select at least one day</string>
    <string name="success_notif">Your alarm has been created</string>
    <string name="no_highlights">No highlighted routines yet</string>
    <string name="no_recents">You haven\'t executed any routine</string>
    <string name="choose_day">Choose days</string>
    <string name="share">Share</string>
    <string name="action_take_qr">Take QR</string>
    <string name="scan_qr">Scan QR</string>
    <string name="scan_your_code">Scan your code</string>
    <string name="no_perm">You need the camera permission to be able to scan codes</string>
    <string name="no_app">No App Available</string>
    <string name="looks_like_there_are_no_routines_yet">Looks like there are no routines yet!</string>
    <string name="missing_routine">Missing routine information</string>
    <string name="review_text">Review this routine</string>
    <string name="category_label">Category: </string>
    <string name="difficulty_label">Difficulty: </string>
    <string name="post_review">Post</string>
    <string name="share_text">Share</string>
    <string name="back_text">Back</string>
    <string name="looks_like_there_are_no_fav_routines_yet" >Looks like there are no favourite routines yet!
    </string>
    <string name="add_fav" >
        Add any using ❤ button
    </string>
    <string name="rest">Rest</string>
    <string name="exercise">Exercise</string>
    <string name="current_exercise">Current exercise</string>
    <string name="next_exercises">Next exercises</string>
    <string-array name="difficulties">
        <item name="rookie">Rookie</item>
        <item name="beginner">Beginner</item>
        <item name="intermediate">Intermediate</item>
        <item name="advanced">Advanced</item>
        <item name="expert">Expert</item>
    </string-array>
</resources>