<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_url"
        android:title="@string/url"
        android:icon="@drawable/ic_url"
        app:showAsAction="always" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_filter"
        android:title="@string/order_by"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/action_scan_qr"
        android:title="@string/scan_qr"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        app:showAsAction="always"/>

</menu>