<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ar.edu.itba.mygymapp.ui.home.HomeFragment"
        android:label="@string/section_explore"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_myroutines"
        android:name="ar.edu.itba.mygymapp.ui.routines.RoutinesFragment"
        android:label="@string/section_routines"
        tools:layout="@layout/fragment_routines" />



    <fragment
        android:id="@+id/nav_favourites"
        android:name="ar.edu.itba.mygymapp.ui.favourites.FavouritesFragment"
        android:label="@string/section_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="ar.edu.itba.mygymapp.ui.profile.ProfileFragment"
        android:label="@string/section_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>