<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.scheduler.SchedulerActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/current_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:text="@string/when"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            >

            <CheckBox
                android:id="@+id/checkBox_mon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/secondaryTextColor"
                android:text="@string/monday"
                android:textColor="@color/secondaryTextColor" />

            <CheckBox
                android:id="@+id/checkBox_tue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/secondaryTextColor"
                android:text="@string/Tuesday"
                android:textColor="@color/secondaryTextColor" />

            <CheckBox
                android:id="@+id/checkBox_wed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/secondaryTextColor"
                android:text="@string/wednesday"
                android:textColor="@color/secondaryTextColor" />

            <CheckBox
                android:id="@+id/checkBox_thu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/secondaryTextColor"
                android:text="@string/thursday"
                android:textColor="@color/secondaryTextColor" />

            <CheckBox
                android:id="@+id/checkBox_fri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/secondaryTextColor"
                android:text="@string/friday"
                android:textColor="@color/secondaryTextColor" />


            <CheckBox
                android:id="@+id/checkBox_sat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/secondaryTextColor"
                android:text="@string/saturday"
                android:textColor="@color/secondaryTextColor" />

            <CheckBox
                android:id="@+id/checkBox_sun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/secondaryTextColor"
                android:text="@string/sunday"
                android:textColor="@color/secondaryTextColor" />
        </LinearLayout>


        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/whiteTextColor"
            android:headerBackground="@color/secondaryTextColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cancel_btn_sch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/logoutColor"
                android:text="@string/cancel" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/accept_btn_sch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>