<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/view_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/viewLabel"
        app:layout_constraintStart_toStartOf="@+id/sort_spinner"
        app:layout_constraintTop_toTopOf="@+id/viewLabel" />

    <TextView
        android:id="@+id/viewLabel"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/view_spinner_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/sortLabel"
        app:layout_constraintTop_toBottomOf="@+id/sortLabel" />

    <TextView
        android:id="@+id/sortLabel"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/sort_spinner_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sort_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/sortLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sortLabel" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/action_search"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/view_spinner"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        tools:layout_editor_absoluteY="197dp" />

</androidx.constraintlayout.widget.ConstraintLayout>